docs(storybook): changed gitter to slack

--- a/libs/angular-storybook/stories/getting-started.stories.mdx
+++ b/libs/angular-storybook/stories/getting-started.stories.mdx
@@ -192,10 +192,10 @@ if(environemnt.production) {
       View the source and add issues
     </span>
   </a>
-  <a class="link-item" href="https://gitter.im/rxzu-diagrams/community" target="_blank">
+  <a class="link-item" href="https://netzerstudio.slack.com/app_redirect?channel=rxzu" target="_blank">
     <img src={Comments} alt="comments" />
     <span>
-      <strong>Gitter chat</strong>
+      <strong>Slack chat</strong>
       Chat with maintainers and the community
     </span>
   </a>
