--- a/libs/angular/src/stories/changelog.stories.mdx
+++ b/libs/angular/src/stories/changelog.stories.mdx
@@ -1,5 +1,5 @@
-import { Meta, Description } from '@storybook/addon-docs/blocks';
-import Changelog from '../../../../CHANGELOG.md'
+import { Meta, Description } from '@storybook/addon-docs';
+import Changelog from '../../../../CHANGELOG.md';
 
 <Meta title="Changelog" />
 
